c4/authn-authz/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-lb
  namespace: iam
spec:
  ports:
  - name: keycloak-http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: keycloak
  type: LoadBalancer
